# wiki_gen_qa

./: .gitignore  LICENSE  README.md  pyproject.toml  run_qa_gen.py
.github/: pull_request_template.md
tests/: test_wiki_tools.py
wiki_gen_qa/: generate_qa.py  prompts.py  wiki_tools.py
wiki_rag_qa/: generate_qa.py  wiki_tools.py
wiki_rag_qa/rag/: simple_rag.py
