[tool.poetry]
name = "wiki-gen-qa"
version = "0.1.0"
description = ""
authors = ["johnxqiu <{ID}+{username}@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.340"
openai = "^1.3.5"
wikipedia-api = "^0.6.0"
nltk = "^3.8.1"
sentence-transformers = "^2.2.2"
chromadb = "^0.4.18"
langchainhub = "^0.1.14"
pandas = "^2.1.3"
langchain-core = "^0.0.6"
ipywidgets = "^8.1.1"
spacy = "^3.7.2"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"}
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
